--- a/.github/workflows/java-tests.yml
+++ b/.github/workflows/java-tests.yml
@@ -20,14 +20,7 @@ jobs:
         uses: actions/setup-java@v3
         with:
           java-version: '11'
-
-      - name: Cache Maven packages
-        uses: actions/cache@v3
-        with:
-          path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-maven-
+          cache: maven
 
       - name: Build with Maven
         run: mvn clean install
