Fix para arquivo yml

--- a/.github/workflows/java-tests.yml
+++ b/.github/workflows/java-tests.yml
@@ -23,8 +23,5 @@ jobs:
           distribution: 'temurin'
           cache: maven
 
-      - name: Build with Maven
+      - name: Build and Test with Maven
         run: mvn clean install
-
-      - name: Run tests
-        run: mvn clean test
