--- a/.github/workflows/java-tests.yml
+++ b/.github/workflows/java-tests.yml
@@ -30,9 +30,28 @@ jobs:
       - name: Build and Run REST Assured Tests with Maven
         run: mvn clean test
 
-      - name: Archive REST-Assured results
-        uses: actions/upload-artifact@v4
+      - name: Get Allure history
+        uses: actions/checkout@v4
+        if: always()
+        continue-on-error: true
         with:
-          name: REST-Assured-results
-          path: target/surefire-reports
+          ref: gh-pages
+          path: gh-pages
 
+      - name: Allure Report action from marketplace
+        uses: simple-elf/allure-report-action@master
+        if: always()
+        id: allure-report
+        with:
+          allure_results: allure-results
+          gh_pages: gh-pages
+          allure_report: allure-report
+          allure_history: allure-history
+
+      - name: Deploy report to Github Pages
+        if: always()
+        uses: peaceiris/actions-gh-pages@v4
+        env:
+          PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          PUBLISH_BRANCH: gh-pages
+          PUBLISH_DIR: allure-history
