--- a/.github/workflows/java-tests.yml
+++ b/.github/workflows/java-tests.yml
@@ -52,6 +52,6 @@ jobs:
         if: always()
         uses: peaceiris/actions-gh-pages@v4
         env:
-          PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          PERSONAL_TOKEN: ${{ secrets.PERSONAL_TOKEN }}
           PUBLISH_BRANCH: gh-pages
           PUBLISH_DIR: allure-history
