Atualiza arquivo yml

--- a/.github/workflows/java-tests.yml
+++ b/.github/workflows/java-tests.yml
@@ -32,6 +32,8 @@ jobs:
 
       - name: Generate Allure Report
         run: mvn allure:report
+        with:
+          path: target/allure-results
 
       - name: Upload Allure Report Results
         uses: actions/upload-artifact@v4
