--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,7 @@
                 <configuration>
                     <resultsDirectory>target/allure-results</resultsDirectory>
                     <reportDirectory>target/site/allure-maven</reportDirectory>
+                    <reportVersion>2.30.0</reportVersion>
                 </configuration>
             </plugin>
         </plugins>
