--- a/pom.xml
+++ b/pom.xml
@@ -82,8 +82,7 @@
                 <artifactId>allure-maven</artifactId>
                 <version>2.14.0</version>
                 <configuration>
-                    <resultsDirectory>target/allure-results</resultsDirectory>
-                    <reportDirectory>target/site/allure-maven</reportDirectory>
+                    <reportDirectory>${basedir}/target/site/allure-maven</reportDirectory>
                     <reportVersion>2.30.0</reportVersion>
                 </configuration>
             </plugin>
